# aegis

./: Dockerfile  Dockerfile.jenkins  Jenkinsfile  database.py  docker-compose.app.yaml  docker-compose.yaml  producer.py  prometheus.yaml  pyproject.toml  worker.py
adapters/: database.py  vault_api.py
ports/: repository.py
services/: producer.py  worker.py
tests/: locustfile.py  test_logic.py
