[project]
name = "aegis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiobreaker>=1.2.0",
    "aiolimiter>=1.2.1",
    "binance-sdk-spot>=6.0.0",
    "fastapi>=0.128.0",
    "locust>=2.42.6",
    "prometheus-client>=0.23.1",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
    "tornado>=6.5.4",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
